added stats panel, name, and party name panels