@@ -48,7 +48,7 @@ public class FireMage extends JobClass {
         SkillLogicConsumer fireBallLogic = (self, user, targets, onSkillComplete) -> {
 
             int calculateDamage = ScalingLogic.calculateDamage(user,25,15,1.2,0.05);
-            Character target = targets.getFirst();
+            Character target = targets.get(0);
             LogManager.log(self.getActionLog(user, self.getSkillAction().getActionVerb(), targets), LogColor.HERO_ACTION);
             VisualEffectsManager.getInstance().playAnimationOnCharacter("FIREBALL", target, () -> {
                 target.takeDamage(calculateDamage, user, self);
@@ -80,7 +80,7 @@ public class FireMage extends JobClass {
         };
         SkillLogicConsumer staffAttackLogic = (self, user, targets, onSkillComplete) -> {
             int calculateDamage = ScalingLogic.calculateDamage(user,10,0,1.2,0.05);
-            Character target = targets.getFirst();
+            Character target = targets.get(0);
             LogManager.log(self.getActionLog(user, self.getSkillAction().getActionVerb(), targets), LogColor.HERO_ACTION);
             target.takeDamage(calculateDamage, user, self);
             if (onSkillComplete != null) {
